# toolchain

./: .env  .gitignore  .pylintrc  Readme.md  _.db  ___.tc  _main.py  app.py  code.db  env_actions.py  main.py  tree.txt  z.py
.___/: Cargo.toml
.core/: __init__.py  asm_tree.py  fntree.py  forest.py  forge.py  main.py  rules.py
_databases/: foo.db  project_foo.db  snippet.db  snippet_foo.db  test_snippet.db
_libs/project_db/: .env  Cargo.tom  Cargo.toml  sqlite.db
_libs/project_db/src/: _main.rs  class_py.rs  database.rs  db.rs  identifier.rs  lib.rs  main.rs  main_py.rs  models.rs  schema.rs  tc_utils_struct.rs
_libs/project_db/src/entities/: mod.rs  prelude.rs  project.rs
_libs/project_db/src/migrator/: m20250410_000001_project.rs  mod.rs
_libs/snippet_db/: .env  Cargo.toml  _Cargo.toml  snippet_db.pyi
_libs/snippet_db/src/: config_db.rs  db.rs  identifier.rs  lib.rs  main_py.rs  models.rs  schema.rs
_libs/snippet_db/src/entities/: mod.rs  prelude.rs  project.rs  snippet.rs
_libs/snippet_db/src/logic/: create.rs  delete.rs  read.rs
_libs/snippet_db/src/migrator/: m20250301_000001_snippet.rs  m20250301_000002_project.rs  m20250404_000001_snippet.rs  main.rs  mod.rs
_libs/snippet_db/src/py_rs/: mod.rs  prelude.rs
_libs/snippet_db/src/py_rs/project/: mod.rs  prelude.rs  pure_delete.rs  pure_insert.rs  pure_read.rs
_libs/snippet_db/src/py_rs/snippet/: mod.rs  prelude.rs  pure_delete.rs  pure_insert.rs  pure_read.rs
_libs/snippet_db/tests/: code.db  main.py
app/: alias.py  cmd.py  context.py  data.py  errors.py  errs.py  icontext.py  struct.py  (+1 more)
(+278 files in other folders)
