[package]
name = "snippet_db"
version = "0.1.2"
edition = "2021"

[lib]
name = "snippet_db"
crate-type = ["cdylib"]

[dependencies]
sea-orm = { version = "1.1.0", features = [ "sqlx-sqlite", "runtime-async-std-native-tls", "macros" ] }
pyo3 = { version = "0.23.4", features = ["extension-module"] }
sea-orm-migration = "1.1.0"
futures = "0.3.28"
dotenvy = "0.15.7"

